[project]
name = "fink-client"
dynamic = ["version"]
description = "Light-weight client to manipulate alerts from Fink"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "Julien Peloton", email = "peloton@ijclab.in2p3.fr"},
]
maintainers = [
  {name = "Julien Peloton", email = "peloton@ijclab.in2p3.fr"}
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "astropy>=6.1.7",
    "confluent-kafka>=2.14.0",
    "fastavro>=1.9.4,<2.0.0",
    "numpy>=1.23.5",
    "pandas>=1.3.5",
    "pyarrow>=9.0.0",
    "matplotlib",
    "PyYAML",
    "tabulate",
    "tqdm",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "coveralls",
    "ruff",
]

[tool.setuptools.dynamic]
version = {attr = "fink_client.__version__"}

[project.scripts]
fink_consumer = "fink_client.scripts.fink_consumer:main"
fink_datatransfer = "fink_client.scripts.fink_datatransfer:main"
fink_client_register = "fink_client.scripts.fink_client_register:main"
fink_alert_viewer = "fink_client.scripts.fink_alert_viewer:main"

[project.urls]
Homepage = "https://github.com/astrolabsoftware/fink-client"
Documentation = "https://doc.lsst.fink-broker.org/services/summary/"
Repository = "https://github.com/astrolabsoftware/fink-client"
Issues = "https://github.com/astrolabsoftware/fink-client/issues"
Changelog = "https://github.com/astrolabsoftware/fink-client/releases"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
